--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Welcome to ML Primer!\n",
-    "\n",
-    "# 🚀 Building a Transformer from Scratch (Part 1 - Basic Building Blocks)\n",
+    "# Building a Transformer from Scratch (Part 1 - Basic Building Blocks)\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -23,31 +21,27 @@
     "\n",
     "---\n",
     "\n",
-    "## Our Learning Philosophy 🧠💡\n",
+    "## Our Learning Philosophy \n",
     "\n",
-    "We firmly believe that the best way to master complex concepts—especially in deep learning—is through a **hands-on, bottom-up approach**. Instead of simply using pre-built transformer libraries, this problem set challenges you to **construct the model from first principles**. By working through each component step by step, you'll gain a much deeper intuition about how transformers function.\n",
+    "We firmly believe that the best way to master complex concepts—especially in deep learning—is through a **hands-on, bottom-up approach**. Instead of simply using pre-built libraries, this problem set challenges you to **construct the model from first principles**. By working through each component step by step, you'll gain a much deeper intuition about how transformers function.\n",
     "\n",
     "This philosophy aligns with the idea of **active learning**:  \n",
     "✔️ Engaging directly with the material through **coding, experimentation, and problem-solving**.  \n",
     "✔️ Thinking critically, debugging, and refining your understanding **through trial and error**.  \n",
     "✔️ **Searching for solutions online, revisiting lecture notes, and consulting research papers**—just like real machine learning engineers and researchers do!\n",
     "\n",
-    "This problem set also **mirrors how research and industry work**. Engineers don’t just memorize formulas—they break down complex systems, experiment with different approaches, and continuously iterate on their solutions. By adopting this mindset, you’ll **not only develop technical expertise but also cultivate problem-solving skills** that are essential for innovation in AI and machine learning.\n",
+    "This problem set also **mirrors how research and industry work**. Engineers don’t just memorize formulas—they break down complex systems, experiment with different approaches, and continuously iterate on their solutions.\n",
     "\n",
     "---\n",
     "\n",
-    "## What to Expect 🔎📖\n",
+    "## What to Expect\n",
     "\n",
     "As we progress, our goal is to **gradually abstract away** the lower-level components, allowing you to focus on **high-level architectural design, optimization, and real-world deployment**. By the end of this series, you won’t just understand transformers theoretically—you’ll have **practical experience** in modifying, optimizing, and applying them to diverse applications beyond machine translation. \n",
     "\n",
-    "So, **embrace the challenge, experiment fearlessly, and remember**:  \n",
-    "💡 **Struggling with concepts at first is not a sign of failure—it's an essential part of deep learning** (both for neural networks and for humans!).  \n",
-    "\n",
-    "You don’t need to grasp every nitty-gritty detail (and we definitely don't expect you too!) —**as long as you understand the main idea, that’s good enough!** This **especially** applies to the code — we know it's very complicated, and we didn't expect you to be a professional Python programmer before taking this class. The fill in the blank questions were made to be relatively simple - it should require whatever thinking we believe is necessary! However, we do recommend reading through the code, roughly understanding what each line does through the comments (without knowing exactly the operations).\n",
+    "You also don’t need to grasp every nitty-gritty detail (and we definitely don't expect you too!) —**as long as you understand the main idea, that’s good enough!** This **especially** applies to the code — we know it's very complicated, and we didn't expect you to be a professional Python programmer before taking this class. The fill in the blank questions were made to be relatively simple - it should require whatever thinking we believe is necessary! However, we do recommend reading through the code, roughly understanding what each line does through the comments (without knowing exactly the operations).\n",
     "\n",
     "**Anyways, be sure to look out for #TODOs throughout the notebook!**\n",
     "\n",
-    "Let’s dive in! 🚀\n",
     "\n"
    ]
   },
@@ -70,7 +64,7 @@
    "metadata": {},
    "source": [
     "___\n",
-    "# 🔡 Understanding Word Embeddings in Transformers\n",
+    "# Understanding Word Embeddings in Transformers\n",
     "\n",
     "## **What are Embeddings?**\n",
     "Before a transformer can process words, it needs to **convert them into numbers**. Computers don’t understand text, so we represent words as **vectors** (lists of numbers). These numbers are called **word embedding**.\n",
@@ -172,13 +166,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 📍 Understanding Positional Encoding in Transformers\n",
+    "# Understanding Positional Encoding in Transformers\n",
     "\n",
     "## **Why Do We Need Positional Encoding?**\n",
     "Transformers **do not have built-in order awareness**. Unlike RNNs, which process words sequentially, transformers **process all words at once**. This is powerful but creates a problem:  \n",
-    "❓ *How does the model know the order of words in a sentence?*\n",
+    "*How does the model know the order of words in a sentence?*\n",
     "\n",
-    "💡 **Solution: Positional Encoding!**  \n",
+    "**Solution: Positional Encoding!**  \n",
     "Instead of learning word order like an RNN, the transformer **adds a mathematical pattern** to word embeddings. This pattern helps the model **understand word positions**.\n",
     "\n",
     "### **How Does It Work?**\n",
@@ -186,12 +180,12 @@
     "- Words at different positions have **different encoding values**.\n",
     "- Words at similar positions have **similar encoding patterns**.\n",
     "\n",
-    "🔍 **Example:**  \n",
+    "**Example:**  \n",
     "If \"I love pizza\" and \"Pizza love I\" have the same word embeddings, the positional encoding ensures they are processed **differently**.\n",
     "\n",
     "---\n",
     "\n",
-    "## **📝 What Does This Code Do?**\n",
+    "## **What Does This Code Do?**\n",
     "The `PositionalEncoding` class:\n",
     "1. **Creates a matrix (`pe`)** that stores position information for every word.\n",
     "2. Uses **sine (sin) for even indices** and **cosine (cos) for odd indices** to generate a pattern.\n",
@@ -268,12 +262,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 🎯 Understanding Layer Normalization in Transformers\n",
+    "# Understanding Layer Normalization in Transformers\n",
     "\n",
     "## **Why Do We Need Layer Normalization?**\n",
     "When training deep neural networks, some neurons might produce **very large** or **very small** values, making learning unstable. To **fix this**, we use **normalization techniques** that keep the model's outputs at a **consistent scale**.\n",
     "\n",
-    "### **🤔 What is Normalization?**\n",
+    "### **What is Normalization?**\n",
     "Normalization **adjusts values** so they have:\n",
     "\n",
     "✔️ A **mean (average) of 0**  \n",
@@ -350,16 +344,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ⚡ Understanding Feed-Forward Networks in Transformers\n",
+    "# Understanding Feed-Forward Networks in Transformers\n",
     "\n",
     "## **Why Do We Need a Feed-Forward Network?**\n",
     "After processing words through **self-attention**, the transformer needs a way to **further analyze** the information before passing it to the next layer.  \n",
     "\n",
-    "💡 **Solution:** Each transformer block contains a **Feed-Forward Network (FFN)** that helps the model **refine** its understanding of the words.\n",
+    "**Solution:** Each transformer block contains a **Feed-Forward Network (FFN)** that helps the model **refine** its understanding of the words.\n",
     "\n",
     "---\n",
     "\n",
-    "## **🤔 What Does the Feed-Forward Network Do?**\n",
+    "## **What Does the Feed-Forward Network Do?**\n",
     "The FFN is like a **mini neural network** inside the transformer. It has two steps:\n",
     "1. **Expands information** – It increases the number of features (hidden units) so the model can process more complex patterns.\n",
     "2. **Compresses information** – It reduces the features back to the original size, keeping only the most useful details.\n",
@@ -372,7 +366,7 @@
     "\n",
     "---\n",
     "\n",
-    "## **📝 What Does This Code Do?**\n",
+    "## **What Does This Code Do?**\n",
     "The `FeedForwardBlock` class:\n",
     "1. **Expands** word features from `d_model` → `d_ff` (more neurons).\n",
     "2. **Applies ReLU** to remove negative values (helps with learning).\n",
@@ -434,7 +428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 🔍 Understanding Multi-Head Attention in Transformers\n",
+    "# Understanding Multi-Head Attention in Transformers\n",
     "\n",
     "## **What is Attention?**\n",
     "Attention is a way for a model to focus on **important words** in a sentence while processing it. Imagine reading a book—you don't pay equal attention to every word. Instead, your brain focuses on key parts depending on the **context**.\n",
@@ -448,10 +442,10 @@
     "\n",
     "---\n",
     "\n",
-    "## **🤔 What is Multi-Head Attention?**\n",
+    "## **What is Multi-Head Attention?**\n",
     "Instead of applying attention **once**, the transformer applies it **multiple times in parallel** using **multiple attention heads**. Each head focuses on **different aspects** of the sentence.\n",
     "\n",
-    "🔹 **Example:**  \n",
+    "**Example:**  \n",
     "- One attention head might focus on **subject-verb relationships**.  \n",
     "- Another might focus on **object references**.  \n",
     "- Another might focus on **word order**.\n",
@@ -473,15 +467,15 @@
     "\n",
     "---\n",
     "\n",
-    "## **🚫 What is Masking?**\n",
+    "## **What is Masking?**\n",
     "Masking is used to **hide certain words** so the model doesn't \"cheat.\"\n",
     "\n",
-    "🔹 **Padding Mask:** Prevents the model from paying attention to empty spaces in short sentences.  \n",
-    "🔹 **Look-Ahead Mask:** Ensures the model only looks at **previous words** when predicting the next word (important for tasks like future word prediction).\n",
+    "**Padding Mask:** Prevents the model from paying attention to empty spaces in short sentences.  \n",
+    "**Look-Ahead Mask:** Ensures the model only looks at **previous words** when predicting the next word (important for tasks like future word prediction).\n",
     "\n",
     "---\n",
     "\n",
-    "## **📝 What Does This Code Do?**\n",
+    "## **What Does This Code Do?**\n",
     "The `MultiHeadAttentionBlock` class:\n",
     "1. **Creates multiple attention heads** to focus on different parts of the sentence.  \n",
     "2. **Computes attention scores** to decide which words are important.  \n",
