--- a/transformerWithWritten.ipynb
+++ b/transformerWithWritten.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "You also don’t need to grasp every nitty-gritty detail (and we definitely don't expect you too!) —**as long as you understand the main idea, that’s good enough!** This **especially** applies to the code — we know it's very complicated, and we didn't expect you to be a professional Python programmer before taking this class. The fill in the blank questions were made to be relatively simple - it should require whatever thinking we believe is necessary! However, we do recommend reading through the code, roughly understanding what each line does through the comments (without knowing exactly the operations).\n",
     "\n",
-    "**Anyways, be sure to look out for #TODOs throughout the notebook!**\n",
+    "**Anyways, be sure to look out for #TODOs throughout the notebook!** Please, for the fill in the blank ones, do not modify any other part of the code!\n",
     "\n",
     "\n"
    ]
@@ -107,10 +107,10 @@
     "        - vocab_size (int): The number of unique words in our vocabulary.\n",
     "          Example: If vocab_size = 10,000, our vocabulary contains 10,000 different words.\n",
     "        \"\"\"\n",
-    "        super().__init__()  # TODO: Written Task 1.1 \\n\",\n",
-    "                            # This super() function call is a property of something called Inheritance. \\n\",\n",
-    "                            # First read about it here: https://www.geeksforgeeks.org/python-super-with-__init__-method/# \\n\",\n",
-    "                            # Then, write a short paragraph explaining your understanding of this call.\\n\",\n",
+    "        super().__init__()  # TODO: Written Task 1.1\",\n",
+    "                            # This super() function call is a property of something called Inheritance.\",\n",
+    "                            # First read about it here: https://www.geeksforgeeks.org/python-super-with-__init__-method/\",\n",
+    "                            # Then, write a short paragraph explaining your understanding of this call.\",\n",
     "        # TODO: Fill in the blank\n",
     "        self.d_model = ____  # Store the embedding size\n",
     "        self.vocab_size = ____  # Store the vocabulary size\n",
@@ -141,7 +141,7 @@
     "          Output will have shape (2, 4, 512).\n",
     "        \"\"\"\n",
     "        # TODO Written Task 1.2: \\n\",\n",
-    "        # Explain the role of batch_size and seq_len. Why might we use batch_size 2 and seq_len 4 instead of an array with length 8?\\n\"\n",
+    "        # Explain the role of batch_size and seq_len. Why might we use batch_size 2 and seq_len 4 instead of an array with length 8?\"\n",
     "    \n",
     "        # Convert word indices into embedding vectors using the embedding layer.\n",
     "        # This retrieves the 512-dimensional vector corresponding to each word index.\n",
@@ -428,7 +428,7 @@
     "        - Transformed tensor of the same shape as input.\n",
     "        \"\"\"\n",
     "\n",
-    "        # TODO: Fill in the blank.Apply first linear layer, ReLU activation, dropout, then second linear layer\n",
+    "        # TODO: Fill in the blank. Apply first linear layer, ReLU activation, dropout, then second linear layer\n",
     "        x_transformed = self.linear_2(self.dropout(torch.relu(_________)))  # Fill in the blank!\n",
     "\n",
     "        return x_transformed\n"
@@ -584,6 +584,7 @@
     "\n",
     "        #TODO Written Task 1.4: Explain how the queries, keys, and values of each word interact with one another.\n",
     "        #Use this page to guide you if you need help: https://epichka.com/blog/2023/qkv-transformer/\n",
+    "        \n",
     "        # TODO Coding: Fill in the blank. Apply weight matrices to get Q, K, V\n",
     "        query = self.w_q(q)\n",
     "        key = ______\n",
